# tencent-ima-copilot-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  ima_server_simple.py  pyproject.toml  requirements.txt  run.py  start.bat
.github/workflows/: docker-publish.yml
src/: __init__.py  config.py  ima_client.py  models.py
